--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ejs": "^3.1.10",
     "express": "^4.21.1",
     "mongoose": "^8.8.2",
+    "mymvcapp": "file:",
     "nodemon": "^3.1.7"
   }
 }
